--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "kaplay-colors",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Export of main colours used by KAPLAY",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jbakchr/kaplay-colors.git"
   },
-  "keywords": [],
+  "keywords": [
+    "kaplay",
+    "kolors",
+    "colors"
+  ],
   "author": "Jonas Bak Phillipson",
   "license": "MIT",
   "bugs": {
